--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body {
     background-color: #132226;
 }
@@ -43,7 +47,6 @@ table tr td:last-child {
     right: 67.5%;
     width: 500px;
     height: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     background-color: slategray;
     color: aliceblue;
@@ -61,7 +64,22 @@ table tr td:last-child {
 }
 
 #playAgain {
-    margin: 7%;
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    height: 50px;
+    width: 130px;
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #6A8A82;
+    color: aliceblue;
+    border: 2px solid darkgrey;
+}
+
+#restartGame {
+    position: absolute;
+    top: 40px;
+    right: 40px;
     height: 50px;
     width: 130px;
     font-size: 15px;
@@ -76,8 +94,13 @@ table tr td:last-child {
     border: 2px solid black;
 }
 
+#restartGame:hover {
+    background-color: slategray;
+    border: 2px solid black;
+}
+
 footer {
-    background-color: #6A8A82;
+    background-color: slategray;
     position: fixed;
     color: aliceblue;
     text-align: center;
@@ -95,8 +118,30 @@ footer {
     position: absolute;
     right: 100px;
     top: 400px;
-    border: 2px solid black;
-    background-color: #6A8A82;
+}
+
+.turn {
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    left: 100px;
+    top: 400px;
+}
+
+#scoreArea p:first-child {
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+}
+
+#scoreArea p:last-child {
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    left: 100px;
+    top: 250px;
 }
 
 @media only screen and (max-width: 700px) {
@@ -111,6 +156,25 @@ footer {
         font-size: 16px;
     }
     #playAgain {
-        margin-top: 90%;
+        position: absolute;
+        top: 80%;
+        left: 40px;
+    }
+    #restartGame {
+        position: absolute;
+        top: 80%;
+        right: 40px;
+    }
+    #scoreArea p:first-child {
+        font-size: 20px;
+        position: absolute;
+        left: 40px;
+        top: 200px;
+    }
+    #scoreArea p:last-child {
+        font-size: 20px;
+        position: absolute;
+        left: 40px;
+        top: 250px;
     }
 }
